--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="bg_color">#EDF8F8</color>
+    <color name="primary_color">#8effff</color>
+    <color name="primary_dark_color">#52E5E7</color>
+    <color name="pink_bg">#FF3974</color>
+    <color name="neon_bg">#63D2C7</color>
+    <color name="deep_blue">#130CB7</color>
+
+    <color name="grey_unselected">#c2c6c6</color>
+    <color name="grey_box">#D9D9D9</color>
 </resources>
