--- a/app/src/main/res/layout/activity_one_time_info.xml
+++ b/app/src/main/res/layout/activity_one_time_info.xml
@@ -56,21 +56,42 @@
             android:layout_height="18dp"/>
 
         <EditText
-            android:id="@+id/etDOB"
+            android:id="@+id/etAge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter your date of birth"
+            android:hint="Enter your age"
             android:textAlignment="center"
             android:background="@drawable/et_shape"
             android:padding="16dp"
-            android:inputType="date"/>
+            android:inputType="number"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="18dp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu">
+
+            <AutoCompleteTextView
+                android:id="@+id/genderTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:fontFamily="@font/montserrat"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:text="Gender"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="18dp"/>
 
         <EditText
-            android:id="@+id/etNumber"
+            android:id="@+id/etProfession"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter your profession"
