--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,13 @@
     android:background="@color/bg_color"
     tools:context=".LoginActivity">
 
+    <ProgressBar
+        android:id="@+id/loginProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,7 +48,6 @@
             android:layout_width="match_parent"
             android:layout_height="24dp"/>
 
-
         <EditText
             android:id="@+id/etNumber"
             android:layout_width="match_parent"
@@ -54,34 +60,6 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="20dp"/>
-
-        <EditText
-            android:id="@+id/etOTP"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter OTP"
-            android:textAlignment="center"
-            android:background="@drawable/et_shape"
-            android:padding="16dp"
-            android:inputType="number"/>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="18dp"/>
-
-        <TextView
-            android:id="@+id/resend_otp_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:fontFamily="@font/montserrat_medium"
-            android:text="Didn't received OTP? Resend"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <Space
-            android:layout_width="match_parent"
             android:layout_height="28dp"/>
 
         <TextView
@@ -90,7 +68,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:fontFamily="@font/montserrat_semibold"
-            android:text="Login"
+            android:text="Send OTP"
             android:padding="14dp"
             android:elevation="4dp"
             android:layout_marginHorizontal="16dp"
