--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:text="Volunteer"
+                android:text="KYC Completed"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
@@ -185,6 +185,24 @@
                         android:textAlignment="center"
                         android:fontFamily="@font/montserrat"
                         android:text="Terms and Conditions"
+                        android:padding="14dp"
+                        android:elevation="4dp"
+                        android:layout_marginHorizontal="24dp"
+                        android:background="@drawable/et_shape"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"/>
+
+                    <TextView
+                        android:id="@+id/sign_out_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Sign Out"
                         android:padding="14dp"
                         android:elevation="4dp"
                         android:layout_marginHorizontal="24dp"
